; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_surround.c_upmix_7_1_5_1.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_surround.c_upmix_7_1_5_1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, float, float, float, float, float, float, float, float, float, float, float, float, float, float, float, float, i32)* @upmix_7_1_5_1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @upmix_7_1_5_1(%struct.TYPE_7__* %0, float %1, float %2, float %3, float %4, float %5, float %6, float %7, float %8, float %9, float %10, float %11, float %12, float %13, float %14, float %15, float %16, i32 %17) #0 {
  %19 = alloca %struct.TYPE_7__*, align 8
  %20 = alloca float, align 4
  %21 = alloca float, align 4
  %22 = alloca float, align 4
  %23 = alloca float, align 4
  %24 = alloca float, align 4
  %25 = alloca float, align 4
  %26 = alloca float, align 4
  %27 = alloca float, align 4
  %28 = alloca float, align 4
  %29 = alloca float, align 4
  %30 = alloca float, align 4
  %31 = alloca float, align 4
  %32 = alloca float, align 4
  %33 = alloca float, align 4
  %34 = alloca float, align 4
  %35 = alloca float, align 4
  %36 = alloca i32, align 4
  %37 = alloca float, align 4
  %38 = alloca float, align 4
  %39 = alloca float, align 4
  %40 = alloca float, align 4
  %41 = alloca float, align 4
  %42 = alloca float, align 4
  %43 = alloca float*, align 8
  %44 = alloca float*, align 8
  %45 = alloca float*, align 8
  %46 = alloca float*, align 8
  %47 = alloca float*, align 8
  %48 = alloca float*, align 8
  %49 = alloca float*, align 8
  %50 = alloca float*, align 8
  %51 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %19, align 8
  store float %1, float* %20, align 4
  store float %2, float* %21, align 4
  store float %3, float* %22, align 4
  store float %4, float* %23, align 4
  store float %5, float* %24, align 4
  store float %6, float* %25, align 4
  store float %7, float* %26, align 4
  store float %8, float* %27, align 4
  store float %9, float* %28, align 4
  store float %10, float* %29, align 4
  store float %11, float* %30, align 4
  store float %12, float* %31, align 4
  store float %13, float* %32, align 4
  store float %14, float* %33, align 4
  store float %15, float* %34, align 4
  store float %16, float* %35, align 4
  store i32 %17, i32* %36, align 4
  %52 = load %struct.TYPE_7__*, %struct.TYPE_7__** %19, align 8
  %53 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %52, i32 0, i32 0
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %53, align 8
  store %struct.TYPE_6__* %54, %struct.TYPE_6__** %51, align 8
  %55 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %55, i32 0, i32 12
  %57 = load %struct.TYPE_5__*, %struct.TYPE_5__** %56, align 8
  %58 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %57, i32 0, i32 0
  %59 = load i64*, i64** %58, align 8
  %60 = getelementptr inbounds i64, i64* %59, i64 0
  %61 = load i64, i64* %60, align 8
  %62 = inttoptr i64 %61 to float*
  store float* %62, float** %44, align 8
  %63 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %64 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %63, i32 0, i32 12
  %65 = load %struct.TYPE_5__*, %struct.TYPE_5__** %64, align 8
  %66 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %65, i32 0, i32 0
  %67 = load i64*, i64** %66, align 8
  %68 = getelementptr inbounds i64, i64* %67, i64 1
  %69 = load i64, i64* %68, align 8
  %70 = inttoptr i64 %69 to float*
  store float* %70, float** %45, align 8
  %71 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %72 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %71, i32 0, i32 12
  %73 = load %struct.TYPE_5__*, %struct.TYPE_5__** %72, align 8
  %74 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %73, i32 0, i32 0
  %75 = load i64*, i64** %74, align 8
  %76 = getelementptr inbounds i64, i64* %75, i64 2
  %77 = load i64, i64* %76, align 8
  %78 = inttoptr i64 %77 to float*
  store float* %78, float** %43, align 8
  %79 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %80 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %79, i32 0, i32 12
  %81 = load %struct.TYPE_5__*, %struct.TYPE_5__** %80, align 8
  %82 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %81, i32 0, i32 0
  %83 = load i64*, i64** %82, align 8
  %84 = getelementptr inbounds i64, i64* %83, i64 3
  %85 = load i64, i64* %84, align 8
  %86 = inttoptr i64 %85 to float*
  store float* %86, float** %50, align 8
  %87 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %88 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %87, i32 0, i32 12
  %89 = load %struct.TYPE_5__*, %struct.TYPE_5__** %88, align 8
  %90 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %89, i32 0, i32 0
  %91 = load i64*, i64** %90, align 8
  %92 = getelementptr inbounds i64, i64* %91, i64 4
  %93 = load i64, i64* %92, align 8
  %94 = inttoptr i64 %93 to float*
  store float* %94, float** %48, align 8
  %95 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %96 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %95, i32 0, i32 12
  %97 = load %struct.TYPE_5__*, %struct.TYPE_5__** %96, align 8
  %98 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %97, i32 0, i32 0
  %99 = load i64*, i64** %98, align 8
  %100 = getelementptr inbounds i64, i64* %99, i64 5
  %101 = load i64, i64* %100, align 8
  %102 = inttoptr i64 %101 to float*
  store float* %102, float** %49, align 8
  %103 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %104 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %103, i32 0, i32 12
  %105 = load %struct.TYPE_5__*, %struct.TYPE_5__** %104, align 8
  %106 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %105, i32 0, i32 0
  %107 = load i64*, i64** %106, align 8
  %108 = getelementptr inbounds i64, i64* %107, i64 6
  %109 = load i64, i64* %108, align 8
  %110 = inttoptr i64 %109 to float*
  store float* %110, float** %46, align 8
  %111 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %112 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %111, i32 0, i32 12
  %113 = load %struct.TYPE_5__*, %struct.TYPE_5__** %112, align 8
  %114 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %113, i32 0, i32 0
  %115 = load i64*, i64** %114, align 8
  %116 = getelementptr inbounds i64, i64* %115, i64 7
  %117 = load i64, i64* %116, align 8
  %118 = inttoptr i64 %117 to float*
  store float* %118, float** %47, align 8
  %119 = load float, float* %32, align 4
  %120 = fadd float %119, 1.000000e+00
  %121 = fmul float 5.000000e-01, %120
  %122 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %123 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %122, i32 0, i32 11
  %124 = load i32, i32* %123, align 4
  %125 = call float @powf(float %121, i32 %124)
  %126 = load float, float* %33, align 4
  %127 = fadd float %126, 1.000000e+00
  %128 = fmul float %127, 5.000000e-01
  %129 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %130 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %129, i32 0, i32 10
  %131 = load i32, i32* %130, align 8
  %132 = call float @powf(float %128, i32 %131)
  %133 = fmul float %125, %132
  %134 = load float, float* %24, align 4
  %135 = fmul float %133, %134
  store float %135, float* %37, align 4
  %136 = load float, float* %34, align 4
  %137 = fadd float %136, 1.000000e+00
  %138 = fmul float 5.000000e-01, %137
  %139 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %140 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %139, i32 0, i32 9
  %141 = load i32, i32* %140, align 4
  %142 = call float @powf(float %138, i32 %141)
  %143 = load float, float* %35, align 4
  %144 = fadd float %143, 1.000000e+00
  %145 = fmul float %144, 5.000000e-01
  %146 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %147 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %146, i32 0, i32 8
  %148 = load i32, i32* %147, align 8
  %149 = call float @powf(float %145, i32 %148)
  %150 = fmul float %142, %149
  %151 = load float, float* %25, align 4
  %152 = fmul float %150, %151
  store float %152, float* %38, align 4
  %153 = load float, float* %32, align 4
  %154 = fneg float %153
  %155 = fadd float %154, 1.000000e+00
  %156 = fmul float 5.000000e-01, %155
  %157 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %158 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %157, i32 0, i32 7
  %159 = load i32, i32* %158, align 4
  %160 = call float @powf(float %156, i32 %159)
  %161 = load float, float* %33, align 4
  %162 = fadd float %161, 1.000000e+00
  %163 = fmul float %162, 5.000000e-01
  %164 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %165 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %164, i32 0, i32 6
  %166 = load i32, i32* %165, align 8
  %167 = call float @powf(float %163, i32 %166)
  %168 = fmul float %160, %167
  %169 = load float, float* %24, align 4
  %170 = fmul float %168, %169
  store float %170, float* %41, align 4
  %171 = load float, float* %34, align 4
  %172 = fneg float %171
  %173 = fadd float %172, 1.000000e+00
  %174 = fmul float 5.000000e-01, %173
  %175 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %176 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %175, i32 0, i32 5
  %177 = load i32, i32* %176, align 4
  %178 = call float @powf(float %174, i32 %177)
  %179 = load float, float* %35, align 4
  %180 = fadd float %179, 1.000000e+00
  %181 = fmul float %180, 5.000000e-01
  %182 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %183 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %182, i32 0, i32 4
  %184 = load i32, i32* %183, align 8
  %185 = call float @powf(float %181, i32 %184)
  %186 = fmul float %178, %185
  %187 = load float, float* %25, align 4
  %188 = fmul float %186, %187
  store float %188, float* %42, align 4
  %189 = load float, float* %32, align 4
  %190 = call float @llvm.fabs.f32(float %189)
  %191 = fsub float 1.000000e+00, %190
  %192 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %193 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %192, i32 0, i32 3
  %194 = load i32, i32* %193, align 4
  %195 = call float @powf(float %191, i32 %194)
  %196 = load float, float* %33, align 4
  %197 = fadd float %196, 1.000000e+00
  %198 = fmul float %197, 5.000000e-01
  %199 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %200 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %199, i32 0, i32 2
  %201 = load i32, i32* %200, align 8
  %202 = call float @powf(float %198, i32 %201)
  %203 = fmul float %195, %202
  %204 = load float, float* %24, align 4
  %205 = fmul float %203, %204
  store float %205, float* %39, align 4
  %206 = load float, float* %34, align 4
  %207 = call float @llvm.fabs.f32(float %206)
  %208 = fsub float 1.000000e+00, %207
  %209 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %210 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %209, i32 0, i32 1
  %211 = load i32, i32* %210, align 4
  %212 = call float @powf(float %208, i32 %211)
  %213 = load float, float* %35, align 4
  %214 = fadd float %213, 1.000000e+00
  %215 = fmul float %214, 5.000000e-01
  %216 = load %struct.TYPE_6__*, %struct.TYPE_6__** %51, align 8
  %217 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %216, i32 0, i32 0
  %218 = load i32, i32* %217, align 8
  %219 = call float @powf(float %215, i32 %218)
  %220 = fmul float %212, %219
  %221 = load float, float* %25, align 4
  %222 = fmul float %220, %221
  store float %222, float* %40, align 4
  %223 = load float, float* %37, align 4
  %224 = load float, float* %26, align 4
  %225 = call float @cosf(float %224) #4
  %226 = fmul float %223, %225
  %227 = load float*, float** %44, align 8
  %228 = load i32, i32* %36, align 4
  %229 = mul nsw i32 2, %228
  %230 = sext i32 %229 to i64
  %231 = getelementptr inbounds float, float* %227, i64 %230
  store float %226, float* %231, align 4
  %232 = load float, float* %37, align 4
  %233 = load float, float* %26, align 4
  %234 = call float @sinf(float %233) #4
  %235 = fmul float %232, %234
  %236 = load float*, float** %44, align 8
  %237 = load i32, i32* %36, align 4
  %238 = mul nsw i32 2, %237
  %239 = add nsw i32 %238, 1
  %240 = sext i32 %239 to i64
  %241 = getelementptr inbounds float, float* %236, i64 %240
  store float %235, float* %241, align 4
  %242 = load float, float* %38, align 4
  %243 = load float, float* %27, align 4
  %244 = call float @cosf(float %243) #4
  %245 = fmul float %242, %244
  %246 = load float*, float** %45, align 8
  %247 = load i32, i32* %36, align 4
  %248 = mul nsw i32 2, %247
  %249 = sext i32 %248 to i64
  %250 = getelementptr inbounds float, float* %246, i64 %249
  store float %245, float* %250, align 4
  %251 = load float, float* %38, align 4
  %252 = load float, float* %27, align 4
  %253 = call float @sinf(float %252) #4
  %254 = fmul float %251, %253
  %255 = load float*, float** %45, align 8
  %256 = load i32, i32* %36, align 4
  %257 = mul nsw i32 2, %256
  %258 = add nsw i32 %257, 1
  %259 = sext i32 %258 to i64
  %260 = getelementptr inbounds float, float* %255, i64 %259
  store float %254, float* %260, align 4
  %261 = load float, float* %20, align 4
  %262 = load float*, float** %43, align 8
  %263 = load i32, i32* %36, align 4
  %264 = mul nsw i32 2, %263
  %265 = sext i32 %264 to i64
  %266 = getelementptr inbounds float, float* %262, i64 %265
  store float %261, float* %266, align 4
  %267 = load float, float* %21, align 4
  %268 = load float*, float** %43, align 8
  %269 = load i32, i32* %36, align 4
  %270 = mul nsw i32 2, %269
  %271 = add nsw i32 %270, 1
  %272 = sext i32 %271 to i64
  %273 = getelementptr inbounds float, float* %268, i64 %272
  store float %267, float* %273, align 4
  %274 = load float, float* %22, align 4
  %275 = load float*, float** %50, align 8
  %276 = load i32, i32* %36, align 4
  %277 = mul nsw i32 2, %276
  %278 = sext i32 %277 to i64
  %279 = getelementptr inbounds float, float* %275, i64 %278
  store float %274, float* %279, align 4
  %280 = load float, float* %23, align 4
  %281 = load float*, float** %50, align 8
  %282 = load i32, i32* %36, align 4
  %283 = mul nsw i32 2, %282
  %284 = add nsw i32 %283, 1
  %285 = sext i32 %284 to i64
  %286 = getelementptr inbounds float, float* %281, i64 %285
  store float %280, float* %286, align 4
  %287 = load float, float* %41, align 4
  %288 = load float, float* %28, align 4
  %289 = call float @cosf(float %288) #4
  %290 = fmul float %287, %289
  %291 = load float*, float** %48, align 8
  %292 = load i32, i32* %36, align 4
  %293 = mul nsw i32 2, %292
  %294 = sext i32 %293 to i64
  %295 = getelementptr inbounds float, float* %291, i64 %294
  store float %290, float* %295, align 4
  %296 = load float, float* %41, align 4
  %297 = load float, float* %28, align 4
  %298 = call float @sinf(float %297) #4
  %299 = fmul float %296, %298
  %300 = load float*, float** %48, align 8
  %301 = load i32, i32* %36, align 4
  %302 = mul nsw i32 2, %301
  %303 = add nsw i32 %302, 1
  %304 = sext i32 %303 to i64
  %305 = getelementptr inbounds float, float* %300, i64 %304
  store float %299, float* %305, align 4
  %306 = load float, float* %42, align 4
  %307 = load float, float* %29, align 4
  %308 = call float @cosf(float %307) #4
  %309 = fmul float %306, %308
  %310 = load float*, float** %49, align 8
  %311 = load i32, i32* %36, align 4
  %312 = mul nsw i32 2, %311
  %313 = sext i32 %312 to i64
  %314 = getelementptr inbounds float, float* %310, i64 %313
  store float %309, float* %314, align 4
  %315 = load float, float* %42, align 4
  %316 = load float, float* %29, align 4
  %317 = call float @sinf(float %316) #4
  %318 = fmul float %315, %317
  %319 = load float*, float** %49, align 8
  %320 = load i32, i32* %36, align 4
  %321 = mul nsw i32 2, %320
  %322 = add nsw i32 %321, 1
  %323 = sext i32 %322 to i64
  %324 = getelementptr inbounds float, float* %319, i64 %323
  store float %318, float* %324, align 4
  %325 = load float, float* %39, align 4
  %326 = load float, float* %30, align 4
  %327 = call float @cosf(float %326) #4
  %328 = fmul float %325, %327
  %329 = load float*, float** %46, align 8
  %330 = load i32, i32* %36, align 4
  %331 = mul nsw i32 2, %330
  %332 = sext i32 %331 to i64
  %333 = getelementptr inbounds float, float* %329, i64 %332
  store float %328, float* %333, align 4
  %334 = load float, float* %39, align 4
  %335 = load float, float* %30, align 4
  %336 = call float @sinf(float %335) #4
  %337 = fmul float %334, %336
  %338 = load float*, float** %46, align 8
  %339 = load i32, i32* %36, align 4
  %340 = mul nsw i32 2, %339
  %341 = add nsw i32 %340, 1
  %342 = sext i32 %341 to i64
  %343 = getelementptr inbounds float, float* %338, i64 %342
  store float %337, float* %343, align 4
  %344 = load float, float* %40, align 4
  %345 = load float, float* %31, align 4
  %346 = call float @cosf(float %345) #4
  %347 = fmul float %344, %346
  %348 = load float*, float** %47, align 8
  %349 = load i32, i32* %36, align 4
  %350 = mul nsw i32 2, %349
  %351 = sext i32 %350 to i64
  %352 = getelementptr inbounds float, float* %348, i64 %351
  store float %347, float* %352, align 4
  %353 = load float, float* %40, align 4
  %354 = load float, float* %31, align 4
  %355 = call float @sinf(float %354) #4
  %356 = fmul float %353, %355
  %357 = load float*, float** %47, align 8
  %358 = load i32, i32* %36, align 4
  %359 = mul nsw i32 2, %358
  %360 = add nsw i32 %359, 1
  %361 = sext i32 %360 to i64
  %362 = getelementptr inbounds float, float* %357, i64 %361
  store float %356, float* %362, align 4
  ret void
}

declare dso_local float @powf(float, i32) #1

; Function Attrs: nounwind readnone speculatable willreturn
declare float @llvm.fabs.f32(float) #2

; Function Attrs: nounwind
declare dso_local float @cosf(float) #3

; Function Attrs: nounwind
declare dso_local float @sinf(float) #3


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
